k8s/calc-main/calc-main_service-base.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rabbit-demo
  labels:
    hello: all
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calc-main-ingress
  namespace: rabbit-demo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    name: calc-main-ingress
spec:
  rules:
  - host: kuard.micromicroservice.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: calc-main-service
            port: 
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: calc-main-service
  namespace: rabbit-demo
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: calc-main
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calc-main-deploy
  namespace: rabbit-demo
spec:
  replicas: 10
  selector:
    matchLabels:
      app: calc-main
  template:
    metadata:
      labels:
        app: calc-main
    spec:
      containers:
      - name: calc-main
        image: gcr.io/kuar-demo/kuard-amd64:blue
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"
          limits:
            cpu: "250m"
            memory: "128Mi"
        livenessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 30
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 3
